<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_google_maps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvNameTitle"
            style="@style/TitleStyle"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/ivMap"
            app:layout_constraintStart_toEndOf="@id/tvNameTitle"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Leanne Graham" />

        <TextView
            android:id="@+id/tvUsernameTitle"
            style="@style/TitleStyle"
            android:text="@string/username"
            app:layout_constraintBottom_toBottomOf="@id/tvUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvUsername" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvUsernameTitle"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="Bret" />

        <TextView
            android:id="@+id/tvEmailTitle"
            style="@style/TitleStyle"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvEmail" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvEmailTitle"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            tools:text="Sincere@april.biz" />

        <TextView
            android:id="@+id/tvPhoneTitle"
            style="@style/TitleStyle"
            android:text="@string/phone"
            app:layout_constraintBottom_toBottomOf="@id/tvPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPhone" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPhoneTitle"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            tools:text="1-770-736-8031 x56442" />

        <TextView
            android:id="@+id/tvAddressTitle"
            style="@style/TitleStyle"
            android:text="@string/address"
            app:layout_constraintBottom_toBottomOf="@id/tvAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAddress" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAddressTitle"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            tools:text="Apt. 556, Kulas Light, Gwenborough" />

        <TextView
            android:id="@+id/tvCompanyTitle"
            style="@style/TitleStyle"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@id/tvCompany"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCompany" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCompanyTitle"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            tools:text="Romaguera-Crona" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>